--- a/fastjar/Makefile.am
+++ b/fastjar/Makefile.am
@@ -58,6 +58,28 @@ grepjar_DEPENDENCIES = $(ZDEPS) $(LIBIBERTY)
 
 AM_CFLAGS = @fastjar_warn_cflags@
 
+TEXINFO_TEX = ../gcc/doc/include/texinfo.tex
+info_TEXINFOS = fastjar.texi
+fastjar_TEXINFOS = \
+	../gcc/doc/include/gcc-common.texi \
+	../gcc/doc/include/fdl.texi \
+	../gcc/doc/include/gpl.texi
+man_MANS = jar.1 grepjar.1
+EXTRA_DIST = $(man_MANS)
+
+## This is a hack.  We can't set AM_MAKEINFOFLAGS, since that isn't
+## available in 1.4.  Nor can we override or append to MAKEINFO or
+## MAKEINFOFLAGS, since these are overridden by the top-level
+## Makefile.  So, we just duplicate the rules.  FIXME: remove this
+## when we upgrade automake.  Note that we don't include $(srcdir) in
+## my_makei_flags; makeinfo is run in srcdir.
+my_makei_flags += -I ../gcc/doc/include
+fastjar.info: fastjar.texi $(fastjar_TEXINFOS)
+	@cd $(srcdir) && rm -f $@ $@-[0-9] $@-[0-9][0-9]
+	cd $(srcdir) \
+	  && $(MAKEINFO) $(my_makei_flags) `echo $< | sed 's,.*/,,'`
+
+
 TEXI2POD = perl $(srcdir)/../contrib/texi2pod.pl
 POD2MAN = pod2man --center="GNU" --release="gcc-@gcc_version@"
 
